--- a/TheSocialClub/TheSocialClub/Base.lproj/Main.storyboard
+++ b/TheSocialClub/TheSocialClub/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="5LT-uv-dhT">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="XAC-cA-6MA">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
@@ -284,7 +284,7 @@
         <!--Account-->
         <scene sceneID="dZi-ru-Wjh">
             <objects>
-                <viewController id="XAC-cA-6MA" sceneMemberID="viewController">
+                <viewController id="XAC-cA-6MA" customClass="AccountViewController" customModule="TheSocialClub" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="pla-12-Ix7">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -310,8 +310,11 @@
                             <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Tell everyone a little about yourself!" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="pwL-Zs-XS0" userLabel="Profile About Field">
                                 <rect key="frame" x="25" y="404" width="359" height="34"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <action selector="profileAboutField:" destination="93x-Nm-miF" eventType="touchDown" id="Q0i-69-4Ys"/>
+                                </connections>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="About me" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="z7e-UV-wpz">
                                 <rect key="frame" x="25" y="375" width="154" height="21"/>
@@ -331,7 +334,9 @@
                                 <rect key="frame" x="318" y="9" width="82" height="31"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" title="Settings"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Settings">
+                                    <color key="baseForegroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </buttonConfiguration>
                                 <connections>
                                     <segue destination="B3e-PM-UxK" kind="presentation" id="yon-nr-iQx"/>
                                 </connections>
@@ -340,10 +345,26 @@
                                 <rect key="frame" x="0.0" y="75" width="414" height="242"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0x9-Wh-53B">
-                                <rect key="frame" x="20" y="9" width="105" height="31"/>
+                                <rect key="frame" x="165" y="647" width="85" height="31"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" title="Update"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Update">
+                                    <color key="baseForegroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </buttonConfiguration>
+                                <connections>
+                                    <action selector="onUpdateButton:" destination="XAC-cA-6MA" eventType="touchUpInside" id="PUf-91-iTd"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8Y0-eW-4YZ">
+                                <rect key="frame" x="19" y="9" width="69" height="31"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="&lt; Back">
+                                    <color key="baseForegroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </buttonConfiguration>
+                                <connections>
+                                    <segue destination="xLu-xX-Dmi" kind="presentation" id="iS1-t7-sAU"/>
+                                </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="RD6-bk-crq"/>
@@ -355,8 +376,13 @@
                     <toolbarItems/>
                     <navigationItem key="navigationItem" title="Account" id="UgM-4C-hPn"/>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
+                    <connections>
+                        <outlet property="profileAboutField" destination="pwL-Zs-XS0" id="cTj-8o-zgh"/>
+                        <outlet property="profileInterestField" destination="lb1-n0-eXk" id="Sbr-6t-dJk"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Rcf-tr-FbG" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <exit id="93x-Nm-miF" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="1785.5072463768117" y="851.78571428571422"/>
         </scene>
@@ -392,16 +418,20 @@
                                 <rect key="frame" x="290" y="75" width="104" height="31"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" title="Logout"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Logout">
+                                    <color key="baseForegroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </buttonConfiguration>
                                 <connections>
                                     <action selector="logoutButton:" destination="B3e-PM-UxK" eventType="touchUpInside" id="33B-SY-XMN"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="txY-uz-sLY">
-                                <rect key="frame" x="180" y="438" width="56" height="31"/>
+                                <rect key="frame" x="173" y="438" width="69" height="31"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" title="Save"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Save">
+                                    <color key="baseForegroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </buttonConfiguration>
                                 <connections>
                                     <action selector="saveButton:" destination="B3e-PM-UxK" eventType="touchUpInside" id="JiT-8C-FEf"/>
                                 </connections>
@@ -431,6 +461,8 @@
                             <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="Post Content" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="67O-rn-x6X">
                                 <rect key="frame" x="20" y="20" width="374" height="34"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
@@ -448,7 +480,7 @@
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="WOH-Th-ewX"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </view>
                     <connections>
                         <outlet property="postContentField" destination="67O-rn-x6X" id="Vte-AA-Cl3"/>
@@ -580,7 +612,8 @@
     </scenes>
     <inferredMetricsTieBreakers>
         <segue reference="KIq-ai-IgJ"/>
-        <segue reference="yGP-8Y-6yA"/>
+        <segue reference="Txf-AK-0YU"/>
+        <segue reference="iS1-t7-sAU"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="Screen Shot 2022-04-17 at 7.02.45 PM" width="200" height="193"/>
